--- a/anime/musoku.html
+++ b/anime/musoku.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Zom 100: Bucket List of the Dead</title>
+  <title>Mushoku Tensei in hindi</title>
   <script async src="https://www.youtube.com/iframe_api"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;800&display=swap" rel="stylesheet">
@@ -172,7 +172,7 @@
   </div>
 
   <header class="text-center mt-4">
-    <h1 class="text-4xl font-extrabold">Wind Breaker - Season 1</h1>
+    <h1 class="text-4xl font-extrabold">Mushoku Tensei</h1>
   </header>
 
   <div class="video-container" onmousemove="showControls()">
@@ -198,7 +198,8 @@
 
   <div class="description-box">
     <h2 class="text-xl font-semibold mb-2">Description</h2>
-    <p>"Zom 100: Bucket List of the Dead" is an anime about Akira Tendo, a 24-year-old office worker who is tired of his soul-crushing job and lack of purpose. When a zombie outbreak occurs, Akira sees it as an opportunity to live his life to the fullest and creates a bucket list of 100 things he wants to do before becoming a zombie himself. </p>
+    <p>"
+Mushoku Tensei: Jobless Reincarnation is a fantasy anime and light novel series about a jobless, hopeless man who dies and is reborn in a magical world as Rudeus Greyrat. With his memories of his past life intact, he vows to live this new life to the fullest. As he learns magic and grows up, Rudeus embarks on a journey filled with adventure, danger, and emotional growth, striving to overcome his past mistakes and become a better person." </p>
     <button class="control-btn mt-2" onclick="window.open('https://youtube.com/@museasia', '_blank')">Subscribe to Muse Asia</button>
   </div>
 
@@ -211,20 +212,58 @@
   </footer>
 
   <script>
-    const episodes = [
-      { title: "Episode 1", link: "qRd5wbH4Cio" },
-      { title: "Episode 2", link: "_z2gQeguOA0" },
-      { title: "Episode 3", link: "0kl6UUQW_K4" },
-      { title: "Episode 4", link: "JzXyCc_Sj5Q" },
-      { title: "Episode 5", link: "IHM4aCbhUmo" },
-      { title: "Episode 6", link: "93PPhq0V0MM" },
-      { title: "Episode 7", link: "E9WUKtmRQdc" },
-      { title: "Episode 8", link: "HSQc97u8s0Q" },
-      { title: "Episode 9", link: "XTafDZ9ZhUY" },
-      { title: "Episode 10", link: "GJNugrEKk2w" },
-      { title: "Episode 11", link: "EWZrbSs6SOM" },
-      { title: "Episode 12", link: "A1vXw83JAqo" }
-    ];
+   const episodes = [
+  { title: "Episode 1", link: "AA4wS4ihu-8" },
+  { title: "Episode 2", link: "QlOLXrEjki0" },
+  { title: "Episode 3", link: "sTAvXoOrpN4" },
+  { title: "Episode 4", link: "AK-cEanqAgA" },
+  { title: "Episode 5", link: "o8dhXz06-8w" },
+  { title: "Episode 6", link: "D9zegMqpVxY" },
+  { title: "Episode 7", link: "ULypuERFIDM" },
+  { title: "Episode 8", link: "WEaplM4D8yo" },
+  { title: "Episode 9", link: "Qe9W3e3lETE" },
+  { title: "Episode 10", link: "hWDEQnXDeMw" },
+  { title: "Episode 11", link: "u1rpEpojyVs" },
+  { title: "Episode 12", link: "N-cEzRuK1j8" },
+  { title: "Episode 13", link: "6pUZ9asEOW4" },
+  { title: "Episode 14", link: "eMGDLvJ9Xtc" },
+  { title: "Episode 15", link: "OkIgXMWzpuM" },
+  { title: "Episode 16", link: "_lfkTktUqUY" },
+  { title: "Episode 17", link: "wK75QZSImkY" },
+  { title: "Episode 18", link: "nhqGVhIofhU" },
+  { title: "Episode 19", link: "6KRK2DUv0L0" },
+  { title: "Episode 20", link: "tFopwMUAzhI" },
+  { title: "Episode 21", link: "19JD5Tdxt50" },
+  { title: "Episode 22", link: "L_W07cLQ1NQ" },
+  { title: "Episode 23", link: "UUYKnczciO0" },
+  { title: "Episode 24", link: "BWZ9pl3SbT4" },
+  { title: "Episode 25", link: "o248L1-ofAY" },
+  { title: "Episode 26", link: "IWUFmEmY9ho" },
+  { title: "Episode 27", link: "z8CynjOToiM" },
+  { title: "Episode 28", link: "mRWa0ddX6PY" },
+  { title: "Episode 29", link: "gffP04c7IcQ" },
+  { title: "Episode 30", link: "SPme4OSeL64" },
+  { title: "Episode 31", link: "o0MuEK-LYws" },
+  { title: "Episode 32", link: "4KxylbkXJFs" },
+  { title: "Episode 33", link: "MJoCCjCn6r8" },
+  { title: "Episode 34", link: "XwkfOxjKeUA" },
+  { title: "Episode 35", link: "ZHuggTd9yfU" },
+  { title: "Episode 36", link: "xS-S3YLqrJs" },
+  { title: "Episode 37", link: "Ql3UHUGq9Ak" },
+  { title: "Episode 38", link: "u4Ec5_dJqTg" },
+  { title: "Episode 39", link: "D0UXEYUWcig" },
+  { title: "Episode 40", link: "umwL6srcr-0" },
+  { title: "Episode 41", link: "SA3o64320us" },
+  { title: "Episode 42", link: "I39bV9dqtTY" },
+  { title: "Episode 43", link: "_LvkoPx43B8" },
+  { title: "Episode 44", link: "KQGcp005xPk" },
+  { title: "Episode 45", link: "XECKVppY-h4" },
+  { title: "Episode 46", link: "bVAg7bcvV7c" },
+  { title: "Episode 47", link: "vNptPopsjPU" },
+  { title: "Episode 48", link: "85UC4H2wRxE" },
+  { title: "Episode 49", link: "CfRoFWy1aOg" },
+];
+
 
     let player, currentEpisodeIndex = 0, hideControlsTimer, isDragging = false;
 
