--- a/anime/tokyo.html
+++ b/anime/tokyo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Zom 100: Bucket List of the Dead</title>
+  <title>Tokyo revengers both seasons in hindi </title>
   <script async src="https://www.youtube.com/iframe_api"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;800&display=swap" rel="stylesheet">
@@ -172,7 +172,7 @@
   </div>
 
   <header class="text-center mt-4">
-    <h1 class="text-4xl font-extrabold">Wind Breaker - Season 1</h1>
+    <h1 class="text-4xl font-extrabold">Tokyo revengers both seasons in hindi </h1>
   </header>
 
   <div class="video-container" onmousemove="showControls()">
@@ -198,7 +198,8 @@
 
   <div class="description-box">
     <h2 class="text-xl font-semibold mb-2">Description</h2>
-    <p>"Zom 100: Bucket List of the Dead" is an anime about Akira Tendo, a 24-year-old office worker who is tired of his soul-crushing job and lack of purpose. When a zombie outbreak occurs, Akira sees it as an opportunity to live his life to the fullest and creates a bucket list of 100 things he wants to do before becoming a zombie himself. </p>
+    <p>Tokyo Revengers is a time-travel action anime and manga series that follows Takemichi Hanagaki, a young man who gets a chance to change the past after learning his ex-girlfriend was killed by a violent gang. By traveling back in time to his teenage years, Takemichi aims to infiltrate the Tokyo Manji Gang and prevent the tragic events from unfolding, all while facing brutal fights, deep friendships, and tough choices.
+ </p>
     <button class="control-btn mt-2" onclick="window.open('https://youtube.com/@museasia', '_blank')">Subscribe to Muse Asia</button>
   </div>
 
@@ -211,20 +212,33 @@
   </footer>
 
   <script>
-    const episodes = [
-      { title: "Episode 1", link: "qRd5wbH4Cio" },
-      { title: "Episode 2", link: "_z2gQeguOA0" },
-      { title: "Episode 3", link: "0kl6UUQW_K4" },
-      { title: "Episode 4", link: "JzXyCc_Sj5Q" },
-      { title: "Episode 5", link: "IHM4aCbhUmo" },
-      { title: "Episode 6", link: "93PPhq0V0MM" },
-      { title: "Episode 7", link: "E9WUKtmRQdc" },
-      { title: "Episode 8", link: "HSQc97u8s0Q" },
-      { title: "Episode 9", link: "XTafDZ9ZhUY" },
-      { title: "Episode 10", link: "GJNugrEKk2w" },
-      { title: "Episode 11", link: "EWZrbSs6SOM" },
-      { title: "Episode 12", link: "A1vXw83JAqo" }
-    ];
+   const episodes = [
+  { title: "Episode 1", link: "vBOoJIfGYvk" },
+  { title: "Episode 2", link: "pVjITosF53g" },
+  { title: "Episode 3", link: "jwttobgA1w0" },
+  { title: "Episode 4", link: "gYSPlT0Yl5Y" },
+  { title: "Episode 5", link: "-hZLeg6SUfA" },
+  { title: "Episode 6", link: "ZJoJuNCDtMY" },
+  { title: "Episode 7", link: "9I7RFFq6EQY" },
+  { title: "Episode 8", link: "ix2HA4hKbTw" },
+  { title: "Episode 9", link: "x1Cls8_TXUs" },
+  { title: "Episode 10", link: "m0lDeZ1wYzo" },
+  { title: "Episode 11", link: "UwT7wHUmIZA" },
+  { title: "Episode 12", link: "TJo4tvn1Foc" },
+  { title: "Episode 13", link: "eG5c7WtqFks" },
+  { title: "Episode 14", link: "OmrZ7IzSVbU" },
+  { title: "Episode 15", link: "qjEGBvUP16c" },
+  { title: "Episode 16", link: "sSF6-SB5KI8" },
+  { title: "Episode 17", link: "y6gjREheyqw" },
+  { title: "Episode 18", link: "KFVYwxqj3Fo" },
+  { title: "Episode 19", link: "BbbAyKvReMw" },
+  { title: "Episode 20", link: "H-XH9DIevRc" },
+  { title: "Episode 21", link: "ItL6JBUEnCU" },
+  { title: "Episode 22", link: "A3UWoLaskns" },
+  { title: "Episode 23", link: "6hQHRB2rTGQ" },
+  { title: "Episode 24", link: "rAYPPTX-ANM" },
+];
+
 
     let player, currentEpisodeIndex = 0, hideControlsTimer, isDragging = false;
 
