--- a/index.2.html
+++ b/index.2.html
@@ -170,6 +170,21 @@
         cover: "photo/hunter-x-hunter-6l28uunxtr53l0un.jpg",
         link: "anime/HUNTER×HUNTER.html"
       }
+      "Tokyo revengers both seasons in hindi ": {
+        title: "Tokyo revengers both seasons in hindi ",
+        cover: "photo/unnamed (6).jpg",
+        link: "anime/tokyo.html"
+      }
+    "Mushoku Tensei in hindi": {
+        title: "Mushoku Tensei",
+        cover: "photo/unnammmmmed.jpg",
+        link: "anime/musoku.html"
+      }
+    "Fairy tail  in Hindi all episodes ": {
+        title: "Fairy tail  in Hindi all episodes ",
+        cover: "photo/unnamed (7).jpg",
+        link: "anime/fairy.html"
+      }
     };
 
     function loadCarousel() {
