--- a/anime/HUNTER×HUNTER.html
+++ b/anime/HUNTER×HUNTER.html
@@ -103,7 +103,7 @@
   </div>
 
   <header class="text-center mt-4">
-    <h1 class="text-4xl font-extrabold">Wind Breaker - Season 1</h1>
+    <h1 class="text-4xl font-extrabold">Hunter × Hunter</h1>
   </header>
 
   <div class="video-container" onmousemove="showControls()">
