--- a/anime/bucket.html
+++ b/anime/bucket.html
@@ -172,7 +172,7 @@
   </div>
 
   <header class="text-center mt-4">
-    <h1 class="text-4xl font-extrabold">Wind Breaker - Season 1</h1>
+    <h1 class="text-4xl font-extrabold">Zom 100: Bucket List of the Dead</h1>
   </header>
 
   <div class="video-container" onmousemove="showControls()">
