--- a/index.2.html
+++ b/index.2.html
@@ -7,16 +7,16 @@
   <meta name="keywords" content="anime, hindi anime, wind breaker, free streaming, dubbed anime">
   <meta name="author" content="DOOSH HUB Team">
   <title>DOOSH HUB</title>
-  
+
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  
+
   <!-- Roboto Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  
+
   <!-- Favicon -->
   <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" sizes="32x32" />
-  
+
   <style>
     body {
       background: #0f0f0f;
@@ -25,65 +25,161 @@
       overflow-x: hidden;
       animation: fireGlow 10s infinite alternate;
     }
+
     @keyframes fireGlow {
       0% { background-color: #0f0f0f; box-shadow: 0 0 40px #ff00ff, inset 0 0 80px #ff4500; }
       50% { background-color: #1a1a1a; box-shadow: 0 0 60px #ff4500, inset 0 0 100px #ff00ff; }
       100% { background-color: #0f0f0f; box-shadow: 0 0 50px #ff00ff, inset 0 0 70px #ff4500; }
     }
-    
-    /* Spinner */
-    .spinner {
-      border: 4px solid transparent;
-      border-top: 4px solid #ff6b81;
-      border-radius: 50%;
-      width: 24px;
-      height: 24px;
-      animation: spin 1s linear infinite;
-      margin: 0 auto 0.5rem;
-    }
-    @keyframes spin {
-      to { transform: rotate(360deg); }
-    }
 
     header {
-      position: fixed; top: 0; left: 0; width: 100%; background-color: rgba(0,0,0,0.6);
-      display: flex; align-items: center; gap: 1rem; padding: 1rem; z-index:50; transition: all .3s;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.6);
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      padding: 1rem;
+      z-index: 50;
+      transition: all 0.3s ease;
     }
-    .carousel-container { overflow:hidden; margin-top:5rem; }
-    #carousel { display:flex; gap:1rem; padding:1rem; transition:transform .7s ease-in-out; }
-    .carousel-slide{ flex:0 0 auto; width:100%; max-width:90vw; height:200px; border-radius:1rem; overflow:hidden; position:relative; }
-    .carousel-slide img{ width:100%; height:100%; object-fit:cover; }
-    .carousel-caption{ position:absolute; bottom:0; left:0; width:100%; background:linear-gradient(to top, black, transparent); color:#fff; text-align:center; padding:.5rem; font-weight:bold; }
 
-    .anime-grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:1rem; padding:1rem; }
-    .anime-card{ position:relative; overflow:hidden; border-radius:1rem; box-shadow:0 4px 15px rgba(0,0,0,.3); transition:transform .3s; }
-    .anime-card:hover{ transform:translateY(-8px); box-shadow:0 8px 30px #ff00ff; border:2px solid #ff00ff; }
-    .anime-card img{ width:100%; height:260px; object-fit:cover; }
-    .anime-card-title{ position:absolute; bottom:0; left:0; width:100%; background:linear-gradient(to top, black, transparent); color:#fff; text-align:center; padding:.5rem; font-weight:600; }
+    /* Loader animation */
+    @keyframes pulse {
+      0%, 100% { opacity: 0.3; }
+      50% { opacity: 1; }
+    }
 
-    /* Support Popup Styles */
+    #loader span {
+      animation: pulse 1s infinite;
+    }
+
+    .carousel-container {
+      overflow: hidden;
+      margin-top: 5rem;
+    }
+
+    #carousel {
+      display: flex;
+      gap: 1rem;
+      padding: 1rem;
+      transition: transform 0.7s ease-in-out;
+    }
+
+    .carousel-slide {
+      flex: 0 0 auto;
+      width: 100%;
+      max-width: 90vw;
+      height: 200px;
+      border-radius: 1rem;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .carousel-slide img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .carousel-caption {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: linear-gradient(to top, black, transparent);
+      color: white;
+      text-align: center;
+      padding: 0.5rem;
+      font-weight: bold;
+    }
+
+    .anime-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1rem;
+      padding: 1rem;
+    }
+
+    .anime-card {
+      position: relative;
+      overflow: hidden;
+      border-radius: 1rem;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, .3);
+      transition: transform .3s;
+    }
+
+    .anime-card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 8px 30px #ff00ff;
+      border: 2px solid #ff00ff;
+    }
+
+    .anime-card img {
+      width: 100%;
+      height: 260px;
+      object-fit: cover;
+    }
+
+    .anime-card-title {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: linear-gradient(to top, black, transparent);
+      color: white;
+      text-align: center;
+      padding: 0.5rem;
+      font-weight: 600;
+    }
+
+    /* Pop-up styles */
     #supportPopup {
-      display: none; position: fixed; top: 25%; left: 50%; transform: translateX(-50%);
-      width: 50%; max-width: 400px; background: #1a1a1a; color: #fff; border-radius:1rem;
-      padding: 2rem; box-shadow: 0 0 30px rgba(0,0,0,0.8); z-index:10000; text-align:center;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 90%;
+      max-width: 800px;
+      background: #1a1a1a;
+      color: white;
+      border: 2px solid #ff00ff;
+      padding: 2rem;
+      border-radius: 1rem;
+      z-index: 10000;
+      display: none;
+      box-shadow: 0 0 20px #ff00ff;
     }
-    #supportPopup.show { display: block; animation: fadeIn 0.5s ease-in-out; }
-    @keyframes fadeIn { from { opacity:0; transform:translate(-50%,20px);} to { opacity:1; transform:translate(-50%,0);} }
-    #supportPopup .highlight { color:#ff4757; font-weight:bold; }
-    #supportPopup button { margin-top:1rem; background:#ff6b81; color:#fff; padding:.5rem 1rem; border:none; border-radius:.5rem; cursor:pointer; }
+
+    #supportPopup p span {
+      color: #f87171;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
   <!-- Loading Screen -->
-  <div id="loader" class="fixed inset-0 bg-black text-white flex items-center justify-center text-3xl z-[9999]">Loading DOOSH HUB...</div>
+  <div id="loader" class="fixed inset-0 bg-black text-white flex items-center justify-center text-3xl z-[9999]">
+    <span>Loading DOOSH HUB...</span>
+  </div>
 
-  <!-- Support Popup -->
-  <div id="supportPopup">
-    <div class="spinner"></div>
-    <div class="text-xl font-bold mb-2">🥺 Support us, click on this ad!</div>
-    <div class="highlight mb-2">Wait <strong>3-5 sec</strong> on the page<br>(caution: don't download or touch anything from ads)</div>
-    <div class="mb-4">I'm a solo developer who built this site.<br>Please show some support ❤️</div>
-    <button id="closePopup">Got it!</button>
+  <!-- Support Pop-up -->
+  <div id="supportPopup" class="text-center space-y-4">
+    <div class="text-2xl font-semibold">Support Us 🥺</div>
+    <p>
+      I'm a solo developer building this site with love.<br>
+      Please <span>click on the ad</span> below and wait <span>3–5 seconds</span>.<br>
+      <span>⚠️ Don't download or interact with the ad, just wait and come back.</span>
+    </p>
+    <div class="flex justify-center">
+      <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://shebudriftaiter.net/tag.min.js',9277886,document.body||document.documentElement)</script>
+    </div>
+    <div class="flex justify-center gap-4 pt-2">
+      <button onclick="handleSupportClick()" class="px-5 py-2 bg-pink-600 rounded-full font-bold">Yes, I will support</button>
+      <button onclick="document.getElementById('supportPopup').style.display='none'" class="px-5 py-2 bg-gray-600 rounded-full">No, thanks</button>
+    </div>
   </div>
 
   <!-- Support Button -->
@@ -94,8 +190,8 @@
 
   <!-- Header -->
   <header>
-    <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" class="w-12 h-12 rounded-full" />
-    <input id="search" type="text" placeholder="Search animes, movies, dramas..." class="flex-1 bg-gray-700 placeholder-gray-400 text-white rounded-lg px-3 py-2" oninput="filterAnime()" />
+    <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" class="w-12 h-12 rounded-full"/>
+    <input id="search" type="text" placeholder="Search animes, movies, dramas..." class="flex-1 bg-gray-700 placeholder-gray-400 text-white rounded-lg px-3 py-2" oninput="filterAnime()"/>
   </header>
 
   <!-- Welcome Message -->
@@ -109,92 +205,137 @@
   <!-- Anime Grid -->
   <main id="animeList" class="anime-grid"></main>
 
-  <!-- Ads Code -->
-  <script>(function(s,u,z,p){s.src=u;s.setAttribute('data-zone',z);p.appendChild(s);})(document.createElement('script'),'https://shebudriftaiter.net/tag.min.js',9277886,document.body||document.documentElement)</script>
-
   <script>
-    // Anime Data
     const animeData = {
-      "wind-breaker season 1": { title: "WIND BREAKER Season 1 in Hindi", cover: "photo/18815.jpg", link: "anime/windbreakerseason1.html" },
-      "Zom 100: Bucket List of the Dead": { title: "Zom 100: Bucket List of the Dead", cover: "photo/unnamed (2).jpg", link: "anime/bucket.html" },
-      "hunter x hunter": { title: "hunter x hunter", cover: "photo/hunter-x-hunter-6l28uunxtr53l0un.jpg", link: "anime/HUNTER×HUNTER.html" },
-      "Tokyo revengers both seasons in hindi ": { title: "Tokyo revengers both seasons in hindi ", cover: "photo/unnamed (6).jpg", link: "anime/tokyo.html" },
-      "Mushoku Tensei in hindi": { title: "Mushoku Tensei", cover: "photo/unnammmmmed.jpg", link: "anime/musoku.html" },
-      "Fairy tail  in Hindi all episodes ": { title: "Fairy tail  in Hindi all episodes ", cover: "photo/unnamed (7).jpg", link: "anime/fairy.html" }
+      "wind-breaker season 1": {
+        title: "WIND BREAKER Season 1 in Hindi",
+        cover: "photo/18815.jpg",
+        link: "anime/windbreakerseason1.html"
+      },
+      "Zom 100: Bucket List of the Dead": {
+        title: "Zom 100: Bucket List of the Dead",
+        cover: "photo/unnamed (2).jpg",
+        link: "anime/bucket.html"
+      },
+      "hunter x hunter": {
+        title: "hunter x hunter",
+        cover: "photo/hunter-x-hunter-6l28uunxtr53l0un.jpg",
+        link: "anime/HUNTER×HUNTER.html"
+      },
+      "Tokyo revengers both seasons in hindi ": {
+        title: "Tokyo revengers both seasons in hindi ",
+        cover: "photo/unnamed (6).jpg",
+        link: "anime/tokyo.html"
+      },
+      "Mushoku Tensei in hindi": {
+        title: "Mushoku Tensei",
+        cover: "photo/unnammmmmed.jpg",
+        link: "anime/musoku.html"
+      },
+      "Fairy tail  in Hindi all episodes ": {
+        title: "Fairy tail  in Hindi all episodes ",
+        cover: "photo/unnamed (7).jpg",
+        link: "anime/fairy.html"
+      }
     };
 
-    // Populate carousel
     function loadCarousel() {
-      const carousel = document.getElementById('carousel'); carousel.innerHTML = '';
-      Object.values(animeData).forEach(a => {
-        const slide = document.createElement('a'); slide.href=a.link; slide.className='carousel-slide';
-        slide.innerHTML = `<img src="${a.cover}" alt="${a.title}"/><div class="carousel-caption">${a.title}</div>`;
+      const carousel = document.getElementById('carousel');
+      carousel.innerHTML = '';
+      Object.values(animeData).forEach((a) => {
+        const slide = document.createElement('a');
+        slide.href = a.link;
+        slide.className = 'carousel-slide';
+        slide.innerHTML = `<img src="${a.cover}" alt="${a.title}" /><div class="carousel-caption">${a.title}</div>`;
         carousel.appendChild(slide);
       });
-      Object.values(animeData).slice(0,2).forEach(a => {
-        const clone = document.createElement('a'); clone.href=a.link; clone.className='carousel-slide';
-        clone.innerHTML = `<img src="${a.cover}" alt="${a.title}"/><div class="carousel-caption">${a.title}</div>`;
+      Object.values(animeData).slice(0, 2).forEach((a) => {
+        const clone = document.createElement('a');
+        clone.href = a.link;
+        clone.className = 'carousel-slide';
+        clone.innerHTML = `<img src="${a.cover}" alt="${a.title}" /><div class="carousel-caption">${a.title}</div>`;
         carousel.appendChild(clone);
       });
     }
 
-    // Carousel auto-slide
-    let slideIndex=0;
+    let slideIndex = 0;
     function autoSlide() {
-      const carousel=document.getElementById('carousel'), slides=carousel.querySelectorAll('.carousel-slide');
-      const w=slides[0].offsetWidth+16; slideIndex++; carousel.style.transition='transform .7s ease-in-out';
-      carousel.style.transform=`translateX(-${slideIndex*w}px)`;
-      if(slideIndex>=slides.length-2){ setTimeout(()=>{ carousel.style.transition='none'; carousel.style.transform='translateX(0)'; slideIndex=0; },700); }
+      const carousel = document.getElementById('carousel');
+      const slides = carousel.querySelectorAll('.carousel-slide');
+      const slideWidth = slides[0].offsetWidth + 16;
+      slideIndex++;
+      carousel.style.transition = 'transform 0.7s ease-in-out';
+      carousel.style.transform = `translateX(-${slideIndex * slideWidth}px)`;
+      if (slideIndex >= slides.length - 2) {
+        setTimeout(() => {
+          carousel.style.transition = 'none';
+          carousel.style.transform = 'translateX(0)';
+          slideIndex = 0;
+        }, 700);
+      }
     }
 
-    // Load anime cards
-    function loadAnimeCards(){
-      const grid=document.getElementById('animeList'); grid.innerHTML='';
-      Object.values(animeData).forEach(a=>{ const card=document.createElement('a'); card.href=a.link; card.className='anime-card';
-        card.innerHTML=`<img src="${a.cover}" alt="${a.title}"/><div class="anime-card-title">${a.title}</div>`;
+    function loadAnimeCards() {
+      const grid = document.getElementById('animeList');
+      grid.innerHTML = '';
+      Object.values(animeData).forEach(a => {
+        const card = document.createElement('a');
+        card.href = a.link;
+        card.className = 'anime-card';
+        card.innerHTML = `<img src="${a.cover}" alt="${a.title}"/><div class="anime-card-title">${a.title}</div>`;
         grid.appendChild(card);
       });
     }
 
-    // Filter
-    function filterAnime(){ const q=document.getElementById('search').value.toLowerCase();
-      document.querySelectorAll('.anime-card').forEach(c=>{ const t=c.querySelector('.anime-card-title').innerText.toLowerCase(); c.style.display=t.includes(q)?'':'none'; });
+    function filterAnime() {
+      const q = document.getElementById('search').value.toLowerCase();
+      document.querySelectorAll('.anime-card').forEach(c => {
+        const t = c.querySelector('.anime-card-title').innerText.toLowerCase();
+        c.style.display = t.includes(q) ? '' : 'none';
+      });
     }
 
-    // Scroll to top
-    function scrollToTop(){ window.scrollTo({ top:0, behavior:'smooth' }); }
-    window.onscroll=()=>{ document.getElementById('scrollToTop').style.display=(window.scrollY>200)?'block':'none'; };
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
 
-    // Popunder helper
-    function triggerPopunder(){ const s=document.createElement('script'); s.src='https://shebudriftaiter.net/tag.min.js'; s.setAttribute('data-zone',9277886); document.body.appendChild(s); }
-
-    // Support popup control
-    const popup=document.getElementById('supportPopup'), closeBtn=document.getElementById('closePopup');
-    closeBtn.addEventListener('click',()=>popup.classList.remove('show'));
-
-    function showPopup(){ popup.classList.add('show'); }
-
-    // After load logic
-    window.onload=()=>{
-      setTimeout(()=>{
-        document.getElementById('loader').style.display='none';
-        loadCarousel(); loadAnimeCards(); setInterval(autoSlide,3000);
-        // schedule popup 3s after loader hide or later if ad clicked
-        const lastClick=localStorage.getItem('adClickTime'); const now=Date.now();
-        const delay = !lastClick || now-Number(lastClick)>10*60*1000 ? 3000 : 10*60*1000 - (now-Number(lastClick));
-        setTimeout(showPopup, delay);
-      },2500);
+    window.onscroll = () => {
+      document.getElementById('scrollToTop').style.display = (window.scrollY > 200) ? 'block' : 'none';
     };
 
-    // Detect ad clicks
-    document.addEventListener('click', e=>{
-      if(e.target.tagName==='IFRAME' || e.target.closest('iframe')){
-        localStorage.setItem('adClickTime', Date.now()); popup.classList.remove('show');
+    function triggerPopunder() {
+      const now = Date.now();
+      const lastAd = localStorage.getItem('lastAdClick') || 0;
+      if (now - lastAd > 10 * 60 * 1000) {
+        const s = document.createElement('script');
+        s.src = 'https://shebudriftaiter.net/tag.min.js';
+        s.setAttribute('data-zone', '9277886');
+        document.body.appendChild(s);
+        localStorage.setItem('lastAdClick', now);
       }
-    });
-  </script>
+    }
 
-  <!-- Re-insert Ad Script at End -->
-  <script>(function(s,u,z,p){s.src=u;s.setAttribute('data-zone',z);p.appendChild(s);})(document.createElement('script'),'https://shebudriftaiter.net/tag.min.js',9277886,document.body||document.documentElement)</script>
+    function handleSupportClick() {
+      triggerPopunder();
+      localStorage.setItem('lastAdClick', Date.now());
+      document.getElementById('supportPopup').style.display = 'none';
+    }
+
+    window.onload = () => {
+      setTimeout(() => {
+        document.getElementById('loader').style.display = 'none';
+        loadCarousel();
+        loadAnimeCards();
+        setInterval(autoSlide, 3000);
+
+        const lastClick = localStorage.getItem('lastAdClick') || 0;
+        if (Date.now() - lastClick > 10 * 60 * 1000) {
+          setTimeout(() => {
+            document.getElementById('supportPopup').style.display = 'block';
+          }, 3000);
+        }
+      }, 2500);
+    };
+  </script>
 </body>
 </html>
