--- a/index.2.html
+++ b/index.2.html
@@ -227,7 +227,7 @@
         cover: "photo/unnamed (6).jpg",
         link: "anime/tokyo.html"
       },
-      "Mushoku Tensei in hindi": {
+      "Mushoku Tensei in hindi in hindi": {
         title: "Mushoku Tensei",
         cover: "photo/unnammmmmed.jpg",
         link: "anime/musoku.html"
